--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -760,17 +760,21 @@
       right: 0;
       top: 0;
       bottom: 0;
-      padding: 0 5%;
+      padding: 0 20%;
       display: flex;
       justify-content: center;
       flex-direction: column;
       text-align: center;
-      background-color: white;
+      background-color: #fff;
+
+      .portfolio-item-modal-title {
+        margin-bottom: 2rem;
+      }
     }
 
     & .portfolio-item-modal-title {
       @include text-regular-title-small();
-      margin-bottom: 0.3rem;
+      margin-bottom: 0.2rem;
     }
 
     & .portfolio-item-modal-subtitle {
@@ -782,11 +786,14 @@
       position: absolute;
       top: 50%;
       bottom: auto;
-      margin-top: -22%;
+      margin-top: -21%;
       left: 17%;
-      width: 82%;
+      width: 79.5%;
       z-index: 1;
       max-width: 1526px;
+      @include media-breakpoint-down(sm) {
+        display: none;
+      }
 
       & .portfolio-item-img-full-wrapper {
         top: 6.4%;
@@ -803,24 +810,62 @@
 
     & .portfolio-item-mobile {
       position: absolute;
-      top: 50%;
-      bottom: auto;
-      margin-top: -6%;
-      left: 8%;
-      width: 15%;
-      z-index: 2;
-      max-width: 242px;
+      @include media-breakpoint-down(sm) {
+        top: 80px;
+        bottom: 80px;
+        left: 0;
+        right: 0;
+        width: auto;
+        max-width: none;
+        border-top: 1px solid #ddd;
+        border-bottom: 1px solid #ddd;
+      }
+      @include media-breakpoint-up(md) {
+        top: 50%;
+        bottom: auto;
+        margin-top: -2%;
+        left: 9%;
+        width: 12.7%;
+        z-index: 2;
+        max-width: 242px;
+      }
 
       & .portfolio-item-img-full-wrapper {
-        top: 9%;
-        left: 2.5%;
-        right: 2.5%;
-        bottom: 22.6%;
+        @include media-breakpoint-down(sm) {
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+        }
+        @include media-breakpoint-up(md) {
+          top: 9%;
+          left: 2.5%;
+          right: 2.5%;
+          bottom: 22.6%;
+        }
+      }
+
+      .portfolio-item-device-img {
+        @include media-breakpoint-down(sm) {
+          display: none;
+        }
       }
 
       & .wrapper {
         width: 100%;
         height: 100%;
+      }
+
+      .portfolio-item-modal-details-wrapper {
+        @include media-breakpoint-up(md) {
+          display: none;
+        }
+      }
+
+      .carousel-indicators {
+        @include media-breakpoint-up(md) {
+          display: none; // TODO correct this, make only the mobile ones appear. instead of notebook
+        }
       }
     }
 
@@ -888,10 +933,6 @@
         bottom: -13%;
       }
     }
-
-    & .portfolio-item-modal-details-wrapper {
-      width: 17%;
-    }
   }
 
   .portfolio-item-modal-notebook {
@@ -902,10 +943,6 @@
       @include media-breakpoint-up(xl) {
         left: -47%;
       }
-    }
-
-    & .portfolio-item-modal-details-wrapper {
-      width: 17%;
     }
   }
 
