--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5099,7 +5099,7 @@ body {
   font-family: "worksans-thin", sans-serif;
   line-height: 1.2;
   color: #000;
-  font-size: 2rem; }
+  font-size: 1.7rem; }
   @media (min-width: 1565px) {
     .section-header-subtitle {
       font-size: 2.4rem; } }
@@ -5439,8 +5439,7 @@ body {
   width: auto; }
 
 .carousel-inner {
-  height: 100%;
-  overflow: visible; }
+  height: 100%; }
 
 .modal-backdrop.in {
   opacity: 1; }
@@ -5541,9 +5540,10 @@ body {
   font-family: "worksans-thin", sans-serif;
   line-height: 1.2;
   color: #000;
-  font-size: 2rem;
+  font-size: 1.7rem;
   position: absolute;
-  text-align: center; }
+  text-align: center;
+  padding-left: 0; }
   @media (min-width: 1565px) {
     .carousel-labels {
       font-size: 2.4rem; } }
@@ -5562,12 +5562,7 @@ body {
     .carousel-labels {
       top: 5%;
       left: 13.5%;
-      right: 0; } }
-
-.carousel-labels-list {
-  padding-left: 0; }
-  @media (max-width: 767px) {
-    .carousel-labels-list {
+      right: 0;
       margin-bottom: 0; } }
 
 .carousel-item-scroll-teaser {
@@ -5586,11 +5581,27 @@ body {
   cursor: s-resize; }
   .carousel-item-scroll-teaser .carousel-item-scroll-teaser-image {
     width: 20%;
-    height: 8%;
+    height: auto;
     max-width: 150px;
     max-height: 71px;
     min-width: 70px;
-    min-height: 35px; }
+    min-height: 35px;
+    display: none; }
+    @media (min-width: 1245px) {
+      .carousel-item-scroll-teaser .carousel-item-scroll-teaser-image {
+        display: block; } }
+  .carousel-item-scroll-teaser .carousel-item-scroll-teaser-image-mobile {
+    width: 20%;
+    height: auto;
+    max-width: 80px;
+    max-height: 40px;
+    min-width: 30px;
+    min-height: 15px;
+    margin-bottom: 1.5rem;
+    position: relative; }
+    @media (min-width: 1245px) {
+      .carousel-item-scroll-teaser .carousel-item-scroll-teaser-image-mobile {
+        display: none; } }
   .carousel-item-scroll-teaser .carousel-item-scroll-teaser-text {
     font-family: "worksans-light", sans-serif;
     color: #000;
@@ -5671,7 +5682,7 @@ body {
 
 @media (min-width: 768px) and (max-width: 1244px) {
   .modal-close-button {
-    font-size: 8vw;
+    font-size: 6vw;
     width: 8vw;
     height: 8vw;
     line-height: 8vw; } }
@@ -5679,7 +5690,7 @@ body {
     .modal-close-button {
       width: 90px;
       height: 90px;
-      font-size: 8rem;
+      font-size: 6.5rem;
       line-height: 90px; } }
   .modal-close-button:hover, .modal-close-button:focus {
     color: #999; }
@@ -5753,6 +5764,12 @@ body {
       letter-spacing: -0.1rem;
       line-height: 1.2; } }
 
+@media (min-width: 1245px) and (max-width: 1564px) {
+  #intro .intro-job-title {
+    font-size: 3.6rem;
+    letter-spacing: -0.08rem;
+    line-height: 1; } }
+
 #intro .intro-message {
   margin-bottom: 15px; }
   @media (min-width: 768px) {
@@ -5791,7 +5808,7 @@ body {
   font-family: "worksans-thin", sans-serif;
   line-height: 1.2;
   color: #000;
-  font-size: 2rem;
+  font-size: 1.7rem;
   font-size: 4.5rem;
   margin-bottom: 1.8rem;
   margin-top: 0; }
@@ -5815,7 +5832,7 @@ body {
   font-family: "worksans-thin", sans-serif;
   line-height: 1.2;
   color: #000;
-  font-size: 2rem;
+  font-size: 1.7rem;
   visibility: hidden;
   width: 100%;
   text-align: center;
@@ -5928,12 +5945,18 @@ body {
     letter-spacing: -0.12rem; } }
   #skills .skills-list-title-small {
     font-family: "worksans-regular", sans-serif;
-    line-height: 1.1;
+    line-height: 1.2;
     color: #000;
     font-size: 2.2rem;
     letter-spacing: -0.12rem;
     margin-top: 0.5rem;
     margin-bottom: 0.4rem; }
+
+@media (min-width: 1245px) and (max-width: 1564px) {
+  #skills .skills-list-title-small {
+    line-height: 1.1;
+    font-size: 1.7rem;
+    letter-spacing: -0.06rem; } }
   #skills .skills-group-javascript, #skills .skills-group-css, #skills .skills-group-html, #skills .skills-group-tools, #skills .skills-group-coding, #skills .skills-group-uxui, #skills .skills-group-backend {
     position: absolute;
     top: 50%;
@@ -6138,12 +6161,18 @@ body {
   @media (min-width: 1245px) {
     #portfolio .portfolio-item-title {
       font-family: "worksans-regular", sans-serif;
-      line-height: 1.1;
+      line-height: 1.2;
       color: #000;
       font-size: 2.2rem;
       letter-spacing: -0.12rem;
       width: 76%;
       margin-bottom: 0.3rem; } }
+
+@media (min-width: 1245px) and (min-width: 1245px) and (max-width: 1564px) {
+  #portfolio .portfolio-item-title {
+    line-height: 1.1;
+    font-size: 1.7rem;
+    letter-spacing: -0.06rem; } }
 
 #portfolio .portfolio-item-secondary-title {
   font-family: "worksans-thin", sans-serif;
@@ -6165,7 +6194,8 @@ body {
 
 @media (min-width: 1245px) and (max-width: 1564px) {
   #portfolio .portfolio-item-secondary-title {
-    font-size: 1.4rem; } }
+    font-size: 1.4rem;
+    letter-spacing: 0.06rem; } }
   @media (min-width: 1245px) {
     #portfolio .portfolio-item-secondary-title {
       margin-top: 0;
@@ -6708,22 +6738,39 @@ body {
   right: 0;
   top: 0;
   bottom: 0;
-  padding: 0 20%;
+  padding: 0 10%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   text-align: center;
   background-color: #fff; }
+
+@media (min-width: 480px) and (max-width: 767px) {
+  #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-details-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-details-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-details-wrapper {
+    padding: 0 10%; } }
+
+@media (min-width: 768px) and (max-width: 1244px) {
+  #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-details-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-details-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-details-wrapper {
+    padding: 0 3%; } }
+  @media (min-width: 1245px) {
+    #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-details-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-details-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-details-wrapper {
+      padding: 0 20%; } }
   #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-details-wrapper .portfolio-item-modal-title, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-details-wrapper .portfolio-item-modal-title, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-details-wrapper .portfolio-item-modal-title {
     margin-bottom: 2rem; }
 
 #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-title, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-title, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-title {
   font-family: "worksans-regular", sans-serif;
-  line-height: 1.1;
+  line-height: 1.2;
   color: #000;
   font-size: 2.2rem;
   letter-spacing: -0.12rem;
   margin-bottom: 0.2rem; }
+
+@media (min-width: 1245px) and (max-width: 1564px) {
+  #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-title, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-title, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-title {
+    line-height: 1.1;
+    font-size: 1.7rem;
+    letter-spacing: -0.06rem; } }
 
 #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-subtitle, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-subtitle, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-subtitle {
   font-family: "worksans-thin", sans-serif;
@@ -6744,7 +6791,8 @@ body {
 
 @media (min-width: 1245px) and (max-width: 1564px) {
   #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-subtitle, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-subtitle, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-subtitle {
-    font-size: 1.4rem; } }
+    font-size: 1.4rem;
+    letter-spacing: 0.06rem; } }
 
 #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook {
   position: absolute;
@@ -6807,7 +6855,7 @@ body {
     width: 100%;
     height: 100%; }
   @media (min-width: 768px) {
-    #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile .portfolio-item-modal-details-wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile .portfolio-item-modal-details-wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile .portfolio-item-modal-details-wrapper {
+    #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile .portfolio-item-modal-details-wrapper *, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile .portfolio-item-modal-details-wrapper *, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile .portfolio-item-modal-details-wrapper * {
       display: none; } }
   @media (min-width: 768px) {
     #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile .carousel-indicators, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile .carousel-indicators, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile .carousel-indicators {
@@ -6918,7 +6966,7 @@ body {
     font-family: "worksans-thin", sans-serif;
     line-height: 1.2;
     color: #000;
-    font-size: 2rem; }
+    font-size: 1.7rem; }
     @media (min-width: 1565px) {
       #experience .experience-timeline-year, #experience .experience-timeline-year-last {
         font-size: 2.4rem; } }
@@ -6933,7 +6981,7 @@ body {
     font-family: "worksans-thin", sans-serif;
     line-height: 1.2;
     color: #000;
-    font-size: 2rem;
+    font-size: 1.7rem;
     margin-bottom: 0.5rem; }
     @media (min-width: 1565px) {
       #experience .experience-employer-name {
@@ -7037,13 +7085,19 @@ body {
         margin-bottom: 0.3rem; } }
   #references .reference-author {
     font-family: "worksans-regular", sans-serif;
-    line-height: 1.1;
+    line-height: 1.2;
     color: #000;
     font-size: 2.2rem;
     letter-spacing: -0.12rem;
     margin-bottom: 0.6rem;
     margin-top: 1.2rem;
     position: relative; }
+
+@media (min-width: 1245px) and (max-width: 1564px) {
+  #references .reference-author {
+    line-height: 1.1;
+    font-size: 1.7rem;
+    letter-spacing: -0.06rem; } }
     @media (max-width: 1244px) {
       #references .reference-author {
         margin-top: 0.6rem; } }
@@ -7067,7 +7121,8 @@ body {
 
 @media (min-width: 1245px) and (max-width: 1564px) {
   #references .reference-author-title {
-    font-size: 1.4rem; } }
+    font-size: 1.4rem;
+    letter-spacing: 0.06rem; } }
   #references .reference-author-title {
     margin-bottom: 0;
     position: relative; }
@@ -7187,7 +7242,7 @@ body {
       font-family: "worksans-thin", sans-serif;
       line-height: 1.2;
       color: #000;
-      font-size: 2rem;
+      font-size: 1.7rem;
       width: 160px;
       height: 160px;
       margin: 0 2rem 0 0;
@@ -7245,7 +7300,7 @@ body {
       font-family: "worksans-thin", sans-serif;
       line-height: 1.2;
       color: #000;
-      font-size: 2rem; }
+      font-size: 1.7rem; }
       @media (min-width: 1565px) {
         #about .about-intro .about-interest-title {
           font-size: 2.4rem; } }
@@ -7400,7 +7455,7 @@ body {
     font-family: "worksans-thin", sans-serif;
     line-height: 1.2;
     color: #000;
-    font-size: 2rem; }
+    font-size: 1.7rem; }
     @media (min-width: 1565px) {
       #contact .contact-content {
         font-size: 2.4rem; } }
@@ -7476,7 +7531,7 @@ body {
     font-family: "worksans-thin", sans-serif;
     line-height: 1.2;
     color: #000;
-    font-size: 2rem;
+    font-size: 1.7rem;
     margin-bottom: 0; }
     @media (min-width: 1565px) {
       #outro .section-header-sub-title {
