--- a/public/css/main.css
+++ b/public/css/main.css
@@ -5452,7 +5452,7 @@ body {
 
 .carousel-control {
   font-family: "worksans-thin", sans-serif;
-  position: absolute;
+  position: fixed;
   color: #666;
   text-shadow: none;
   opacity: 1;
@@ -5464,7 +5464,7 @@ body {
       height: 60px;
       line-height: 60px;
       top: auto;
-      bottom: 10px; } }
+      bottom: 5px; } }
 
 @media (min-width: 768px) and (max-width: 1244px) {
   .carousel-control {
@@ -5497,10 +5497,10 @@ body {
   z-index: 3; }
   @media (max-width: 767px) {
     .in .carousel-indicators {
-      left: 80px;
-      right: 80px;
+      left: 60px;
+      right: 60px;
       position: fixed;
-      bottom: 33px;
+      bottom: 28px;
       display: flex;
       justify-content: center;
       align-items: center; }
@@ -5537,32 +5537,23 @@ body {
   opacity: 0.5; }
 
 .carousel-labels {
-  font-family: "worksans-thin", sans-serif;
-  line-height: 1.2;
-  color: #000;
-  font-size: 1.7rem;
   position: absolute;
   text-align: center;
-  padding-left: 0; }
-  @media (min-width: 1565px) {
-    .carousel-labels {
-      font-size: 2.4rem; } }
+  padding-left: 0;
+  right: 60px; }
   @media (max-width: 767px) {
     .carousel-labels {
       top: 0;
-      height: 80px;
-      right: 0;
-      left: 0;
+      height: 70px;
+      left: 60px;
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
-      padding: 0 70px; } }
-  @media (min-width: 480px) {
+      flex-direction: column; } }
+  @media (min-width: 768px) {
     .carousel-labels {
       top: 5%;
-      left: 13.5%;
-      right: 0;
+      left: 21.5%;
       margin-bottom: 0; } }
 
 .carousel-item-scroll-teaser {
@@ -5579,51 +5570,82 @@ body {
   justify-content: flex-start;
   align-items: center;
   cursor: s-resize; }
-  .carousel-item-scroll-teaser .carousel-item-scroll-teaser-image {
-    width: 20%;
-    height: auto;
-    max-width: 150px;
-    max-height: 71px;
-    min-width: 70px;
-    min-height: 35px;
-    display: none; }
-    @media (min-width: 1245px) {
-      .carousel-item-scroll-teaser .carousel-item-scroll-teaser-image {
-        display: block; } }
-  .carousel-item-scroll-teaser .carousel-item-scroll-teaser-image-mobile {
-    width: 20%;
-    height: auto;
-    max-width: 80px;
-    max-height: 40px;
-    min-width: 30px;
-    min-height: 15px;
-    margin-bottom: 1.5rem;
-    position: relative; }
-    @media (min-width: 1245px) {
-      .carousel-item-scroll-teaser .carousel-item-scroll-teaser-image-mobile {
-        display: none; } }
-  .carousel-item-scroll-teaser .carousel-item-scroll-teaser-text {
-    font-family: "worksans-light", sans-serif;
-    color: #000;
-    font-size: 1.4rem;
-    letter-spacing: -0.01rem;
-    line-height: 1.3;
-    color: #fff; }
+
+.carousel-item-scroll-teaser-icon {
+  position: absolute;
+  left: 20px;
+  right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column; }
+
+.carousel-item-scroll-teaser-image {
+  width: 100%;
+  height: auto;
+  max-width: 150px;
+  min-width: 70px;
+  margin-bottom: 1rem;
+  display: none; }
+  @media (min-width: 1245px) {
+    .carousel-item-scroll-teaser-image {
+      display: block; } }
+
+.carousel-item-scroll-teaser-image-mobile {
+  display: block;
+  width: 100%;
+  height: auto;
+  max-width: 62px;
+  min-width: 30px;
+  margin-bottom: 1rem; }
+  @media (min-width: 1245px) {
+    .carousel-item-scroll-teaser-image-mobile {
+      display: none; } }
+
+.carousel-item-scroll-teaser-text {
+  font-family: "worksans-light", sans-serif;
+  color: #000;
+  font-size: 1.4rem;
+  letter-spacing: -0.01rem;
+  line-height: 1.3;
+  line-height: 1 !important;
+  color: #fff; }
 
 @media (min-width: 768px) and (max-width: 1244px) {
-  .carousel-item-scroll-teaser .carousel-item-scroll-teaser-text {
+  .carousel-item-scroll-teaser-text {
     letter-spacing: -0.02rem;
     font-size: 1.6rem;
     line-height: 1.4; } }
-    @media (min-width: 1565px) {
-      .carousel-item-scroll-teaser .carousel-item-scroll-teaser-text {
-        letter-spacing: -0.02rem;
-        font-size: 1.6rem;
-        line-height: 1.4; } }
-  .carousel-item-scroll-teaser .carousel-item-scroll-teaser-arrow {
-    font-size: 3rem;
-    line-height: 1;
-    transform: rotate(-90deg); }
+  @media (min-width: 1565px) {
+    .carousel-item-scroll-teaser-text {
+      letter-spacing: -0.02rem;
+      font-size: 1.6rem;
+      line-height: 1.4; } }
+
+.carousel-labels-list {
+  padding-left: 0;
+  margin-bottom: 0; }
+
+.carousel-label {
+  font-family: "worksans-thin", sans-serif;
+  line-height: 1.2;
+  color: #000;
+  font-size: 1.7rem;
+  letter-spacing: 0.03rem; }
+  @media (max-width: 767px) {
+    .carousel-label {
+      font-size: 1.6rem;
+      letter-spacing: 0.05rem; } }
+
+@media (min-width: 768px) and (max-width: 1244px) {
+  .carousel-label {
+    font-size: 1.8rem;
+    letter-spacing: 0.03rem; } }
+
+@media (min-width: 1245px) and (max-width: 1564px) {
+  .carousel-label {
+    font-size: 1.4rem;
+    letter-spacing: 0.06rem; } }
 
 .modal.fade .modal-dialog {
   transition: none;
@@ -5957,6 +5979,11 @@ body {
     line-height: 1.1;
     font-size: 1.7rem;
     letter-spacing: -0.06rem; } }
+    @media (max-width: 767px) {
+      #skills .skills-list-title-small {
+        line-height: 1;
+        font-size: 1.7rem;
+        letter-spacing: -0.04rem; } }
   #skills .skills-group-javascript, #skills .skills-group-css, #skills .skills-group-html, #skills .skills-group-tools, #skills .skills-group-coding, #skills .skills-group-uxui, #skills .skills-group-backend {
     position: absolute;
     top: 50%;
@@ -6173,6 +6200,11 @@ body {
     line-height: 1.1;
     font-size: 1.7rem;
     letter-spacing: -0.06rem; } }
+  @media (min-width: 1245px) and (max-width: 767px) {
+    #portfolio .portfolio-item-title {
+      line-height: 1;
+      font-size: 1.7rem;
+      letter-spacing: -0.04rem; } }
 
 #portfolio .portfolio-item-secondary-title {
   font-family: "worksans-thin", sans-serif;
@@ -6771,6 +6803,14 @@ body {
     line-height: 1.1;
     font-size: 1.7rem;
     letter-spacing: -0.06rem; } }
+  @media (max-width: 767px) {
+    #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-title, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-title, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-title {
+      line-height: 1;
+      font-size: 1.7rem;
+      letter-spacing: -0.04rem; } }
+  @media (max-width: 767px) {
+    #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-title .line-breaker, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-title .line-breaker, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-title .line-breaker {
+      display: block; } }
 
 #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-modal-subtitle, #portfolio .portfolio-item-modal-tv .portfolio-item-modal-subtitle, #portfolio .portfolio-item-modal-notebook .portfolio-item-modal-subtitle {
   font-family: "worksans-thin", sans-serif;
@@ -6814,13 +6854,15 @@ body {
   #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook .wrapper, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook .wrapper, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook .wrapper {
     width: 100%;
     height: 100%; }
+  #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook .carousel-item-scroll-teaser-icon, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook .carousel-item-scroll-teaser-icon, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook .carousel-item-scroll-teaser-icon {
+    top: 40px; }
 
 #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile {
   position: absolute; }
   @media (max-width: 767px) {
     #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile {
-      top: 80px;
-      bottom: 80px;
+      top: 70px;
+      bottom: 70px;
       left: 0;
       right: 0;
       width: auto;
@@ -6860,6 +6902,12 @@ body {
   @media (min-width: 768px) {
     #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile .carousel-indicators, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile .carousel-indicators, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile .carousel-indicators {
       display: none; } }
+  #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile .carousel-item-scroll-teaser-icon, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile .carousel-item-scroll-teaser-icon, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile .carousel-item-scroll-teaser-icon {
+    top: 30px; }
+
+@media (min-width: 768px) and (max-width: 1244px) {
+  #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile .carousel-item-scroll-teaser-icon, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile .carousel-item-scroll-teaser-icon, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile .carousel-item-scroll-teaser-icon {
+    top: 15px; } }
 
 #portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-samsung-tv, #portfolio .portfolio-item-modal-tv .portfolio-item-samsung-tv, #portfolio .portfolio-item-modal-notebook .portfolio-item-samsung-tv {
   position: absolute;
@@ -6890,12 +6938,6 @@ body {
     width: 100%;
     height: 100%;
     max-width: 1200px; }
-
-#portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-mobile .carousel-item-scroll-teaser, #portfolio .portfolio-item-modal-tv .portfolio-item-mobile .carousel-item-scroll-teaser, #portfolio .portfolio-item-modal-notebook .portfolio-item-mobile .carousel-item-scroll-teaser {
-  padding-top: 50%; }
-
-#portfolio .portfolio-item-modal-notebook-mobile .portfolio-item-notebook .carousel-item-scroll-teaser, #portfolio .portfolio-item-modal-tv .portfolio-item-notebook .carousel-item-scroll-teaser, #portfolio .portfolio-item-modal-notebook .portfolio-item-notebook .carousel-item-scroll-teaser {
-  padding-top: 27%; }
 
 #portfolio .portfolio-item-modal-tv .carousel-control {
   top: 39%; }
@@ -7098,6 +7140,11 @@ body {
     line-height: 1.1;
     font-size: 1.7rem;
     letter-spacing: -0.06rem; } }
+    @media (max-width: 767px) {
+      #references .reference-author {
+        line-height: 1;
+        font-size: 1.7rem;
+        letter-spacing: -0.04rem; } }
     @media (max-width: 1244px) {
       #references .reference-author {
         margin-top: 0.6rem; } }
