--- a/src/scss/sections/_portfolio.scss
+++ b/src/scss/sections/_portfolio.scss
@@ -784,6 +784,12 @@
     & .portfolio-item-modal-title {
       @include text-regular-title-small();
       margin-bottom: 0.2rem;
+
+      .line-breaker {
+        @include media-breakpoint-down(sm) {
+          display: block;
+        }
+      }
     }
 
     & .portfolio-item-modal-subtitle {
@@ -815,13 +821,17 @@
         width: 100%;
         height: 100%;
       }
+
+      .carousel-item-scroll-teaser-icon {
+        top: 40px;
+      }
     }
 
     & .portfolio-item-mobile {
       position: absolute;
       @include media-breakpoint-down(sm) {
-        top: 80px;
-        bottom: 80px;
+        top: 70px;
+        bottom: 70px;
         left: 0;
         right: 0;
         width: auto;
@@ -876,6 +886,13 @@
           display: none; // TODO correct this, make only the mobile ones appear. instead of notebook
         }
       }
+
+      .carousel-item-scroll-teaser-icon {
+        top: 30px;
+        @include media-breakpoint-only(md) {
+          top: 15px;
+        }
+      }
     }
 
     & .portfolio-item-samsung-tv {
@@ -913,14 +930,6 @@
         height: 100%;
         max-width: 1200px;
       }
-    }
-
-    & .portfolio-item-mobile .carousel-item-scroll-teaser {
-      padding-top: 50%;
-    }
-
-    & .portfolio-item-notebook .carousel-item-scroll-teaser {
-      padding-top: 27%;
     }
   }
 
