--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,7 +8,7 @@
 @import "COMMON_base-layout";
 @import "COMMON_carousel";
 @import "COMMON_modal";
-@import "COMMON_trackpad-scroll";
+@import "common_trackpad-scroll";
 
 @import "SECTION_intro";
 @import "SECTION_skills";
