--- a/src/scss/_COMMON_modal.scss
+++ b/src/scss/_COMMON_modal.scss
@@ -42,8 +42,6 @@
   outline: none;
   overflow: hidden;
   position: relative;
-  min-width: 768px;
-  min-height: 465px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -53,11 +51,21 @@
     height: 100%;
   }
   @include media-breakpoint-up(md) {
+    min-width: 768px;
+    min-height: 504px;
     width: 100vw;
-    height: 62.5vw; /* height:width ratio = 10/16 = .625  */
+    height: 65.6vw; /* height:width ratio = 10.5/16 = .656  */
     max-height: 100vh;
-    max-width: 160vh; /* 16/10 = 1.6 */
+    max-width: 152vh; /* 16/10.5 = 1.52 */
     margin: auto;
+  }
+  @include media-breakpoint-only(lg) {
+    min-height: 548px;
+    min-width: 833px;
+  }
+  @include media-breakpoint-up(xl) {
+    min-height: 680px;
+    min-width: 1034px;
   }
 }
 
