--- a/src/scss/_section_projects.scss
+++ b/src/scss/_section_projects.scss
@@ -834,12 +834,43 @@
 
 @mixin projects-modal-notebook()  {
 
+  .modal-content {
+    @include media-breakpoint-up(md) {
+      min-width: 768px;
+      min-height: 504px;
+      width: 100vw;
+      height: 56.2vw; /* height:width ratio = 9/16 = .562  */
+      max-height: 100vh;
+      max-width: 177vh; /* 16/9 = 1.77 */
+      margin: auto;
+    }
+    @include media-breakpoint-only(lg) {
+      min-height: 548px;
+      min-width: 969px;
+    }
+    @include media-breakpoint-up(xl) {
+      min-height: 680px;
+      min-width: 1203px;
+    }
+  }
+
+  .modal-devices-wrapper {
+    width: 100%;
+    z-index: 1;
+    //max-width: 1240px;
+    position: relative;
+    padding-top: 48%;
+    @include media-breakpoint-down(sm) {
+      display: none;
+    }
+  }
+
   // TODO create new devices for modal
   .projects-item-notebook {
     position: absolute;
     top: 50%;
     bottom: auto;
-    margin-top: -21%;
+    margin-top: -24%;
     left: 17%;
     width: 79.5%;
     z-index: 1;
@@ -859,9 +890,19 @@
       width: 100%;
       height: 100%;
     }
+  }
 
-    .carousel-item-scroll-teaser-icon {
-      top: 40px;
+  .carousel-labels {
+    position: relative;
+    left: 7%;
+  }
+
+  .carousel-indicators {
+    @include media-breakpoint-only(md) {
+      bottom: -24%;
+    }
+    @include media-breakpoint-up(lg) {
+      bottom: -20%;
     }
   }
 }
@@ -886,7 +927,7 @@
     @include media-breakpoint-up(md) {
       top: 50%;
       bottom: auto;
-      margin-top: -2%;
+      margin-top: -5%;
       left: 9%;
       width: 12.7%;
       z-index: 2;
@@ -934,7 +975,6 @@
     }
 
     .carousel-item-scroll-teaser-icon {
-      top: 30px;
       @include media-breakpoint-only(md) {
         top: 15px;
       }
@@ -944,6 +984,27 @@
 
 
 .projects-item-modal-tv {
+
+  .modal-content {
+    @include media-breakpoint-up(md) {
+      min-width: 768px;
+      min-height: 504px;
+      width: 100vw;
+      height: 65.6vw; /* height:width ratio = 10.5/16 = .656  */
+      max-height: 100vh;
+      max-width: 152vh; /* 16/10.5 = 1.52 */
+      margin: auto;
+    }
+    @include media-breakpoint-only(lg) {
+      min-height: 548px;
+      min-width: 833px;
+    }
+    @include media-breakpoint-up(xl) {
+      min-height: 680px;
+      min-width: 1034px;
+    }
+  }
+
   // TODO create new devices for modal, no inheritance
   .projects-item-samsung-tv {
     width: 77.5%;
@@ -973,7 +1034,9 @@
   }
 
   .carousel-indicators {
-    bottom: -25%;
+    @include media-breakpoint-up(md) {
+      bottom: -25%;
+    }
   }
 
   .line-breaker {
